# dns_resolver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  dns_resolver.c  dns_resolver.h
src/common/: resolver_common.h
src/impl/: CMakeLists.txt  resolver_impl.c  resolver_impl.h
test/: CMakeLists.txt  dns_resolver_ares_test.cpp  dns_resolver_test.cpp  fake_resolver_test.cpp
test/fakes/: CMakeLists.txt  fake_resolver_impl.c  fake_resolver_impl.h
